IMPORTANT: Remove all previous versions of assembly, assembly dependencies and services before build, install and test this changeset.
- Added bootstrapper (Setup.exe)
- Added bootstrapper UI
- Fixed MSI installer
- Changed assembly dependencies
- Changed standard buttons styles
- Fixed bug #1033: InvalidOperationException in ThemeManager
- Task #1041 completed

--- a/Source code/Elysium.Test/Elysium.Test.csproj
+++ b/Source code/Elysium.Test/Elysium.Test.csproj
@@ -61,6 +61,12 @@
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\App.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Properties\Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="PresentationCore" />
@@ -97,13 +103,19 @@
     <ProjectReference Include="..\Elysium.Notifications\Elysium.Notifications.csproj">
       <Project>{32D6CB94-F07A-4D84-A5E0-376E51EDFF1D}</Project>
       <Name>Elysium.Notifications</Name>
-      <Private>False</Private>
+      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\Elysium\Elysium.csproj">
       <Project>{5A65DA67-130D-43D8-9224-4559B523B6D4}</Project>
       <Name>Elysium</Name>
-      <Private>False</Private>
+      <Private>True</Private>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\App.manifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Properties\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
