--- a/Source code/Elysium.Notifications.Server/App.config
+++ b/Source code/Elysium.Notifications.Server/App.config
@@ -41,18 +41,18 @@
     </services>
     <bindings>
       <netNamedPipeBinding>
-        <binding closeTimeout="00:00:02"
-                 openTimeout="00:00:02"
-                 receiveTimeout="00:00:02"
-                 sendTimeout="00:00:02"
+        <binding openTimeout="00:02:00"
+                 sendTimeout="00:08:00"
+                 receiveTimeout="00:08:00"
+                 closeTimeout="00:02:00"
                  transactionFlow="false"
                  transferMode="Buffered"
                  transactionProtocol="OleTransactions"
                  hostNameComparisonMode="Exact"
-                 maxBufferPoolSize="524288"
-                 maxBufferSize="65536"
-                 maxConnections="100"
-                 maxReceivedMessageSize="65536">
+                 maxBufferPoolSize="2147483520"
+                 maxBufferSize="16777215"
+                 maxConnections="128"
+                 maxReceivedMessageSize="16777215">
           <security mode="None"/>
         </binding>
       </netNamedPipeBinding>
