--- a/Source code/Elysium.Notifications.Server/Elysium.Notifications.Server.csproj
+++ b/Source code/Elysium.Notifications.Server/Elysium.Notifications.Server.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Debug\x86\</OutputPath>
+    <OutputPath>..\..\Binary\Debug\x86\</OutputPath>
     <DefineConstants>X86;TRACE;DEBUG;CONTRACTS_FULL</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
@@ -71,7 +71,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Release\x86\</OutputPath>
+    <OutputPath>..\..\Binary\Release\x86\</OutputPath>
     <DefineConstants>X86;TRACE;RELEASE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
@@ -113,7 +113,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Debug\x64\</OutputPath>
+    <OutputPath>..\..\Binary\Debug\x64\</OutputPath>
     <DefineConstants>X64;TRACE;DEBUG;CONTRACTS_FULL</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
@@ -155,7 +155,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Release\x64\</OutputPath>
+    <OutputPath>..\..\Binary\Release\x64\</OutputPath>
     <DefineConstants>X64;TRACE;RELEASE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
@@ -270,6 +270,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\..\Tools and Resources\Utilities\signtool\$(Platform)\signtool.exe" sign /f "..\..\..\..\Source code\SigningKey.pfx" "Elysium.Notifications.Server.exe"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\Tools and Resources\Utilities\signtool\$(Platform)\signtool.exe" sign /f "..\..\..\Source code\SigningKey.pfx" "Elysium.Notifications.Server.exe"</PostBuildEvent>
   </PropertyGroup>
 </Project>
