--- a/Source code/Elysium.Notifications/Elysium.Notifications.csproj
+++ b/Source code/Elysium.Notifications/Elysium.Notifications.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Debug\AnyCPU\</OutputPath>
+    <OutputPath>..\..\Binary\Debug\AnyCPU\</OutputPath>
     <DefineConstants>TRACE;DEBUG;CONTRACTS_FULL</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
@@ -72,7 +72,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Release\AnyCPU\</OutputPath>
+    <OutputPath>..\..\Binary\Release\AnyCPU\</OutputPath>
     <DefineConstants>TRACE;RELEASE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
@@ -114,7 +114,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Analysis|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\Binary\Elysium for .NET 4\Analysis\AnyCPU\</OutputPath>
+    <OutputPath>..\..\Binary\Analysis\AnyCPU\</OutputPath>
     <DefineConstants>TRACE;DEBUG;CONTRACTS_FULL;CODE_ANALYSIS</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
@@ -123,7 +123,7 @@
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
     <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <CodeAnalysisLogFile>..\..\Binary\Elysium for .NET 4\Analysis\AnyCPU\Elysium.Notifications.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisLogFile>..\..\Binary\Analysis\AnyCPU\Elysium.Notifications.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -246,6 +246,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\..\Tools and Resources\Utilities\signtool\x86\signtool.exe" sign /f "..\..\..\..\Source code\SigningKey.pfx" "Elysium.Notifications.dll"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\Tools and Resources\Utilities\signtool\x86\signtool.exe" sign /f "..\..\..\Source code\SigningKey.pfx" "Elysium.Notifications.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
