--- a/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1033/VS2012_CSharp_1033_ItemTemplate.csproj
+++ b/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1033/VS2012_CSharp_1033_ItemTemplate.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\..\..\..\..\..\Binary\Elysium for .NET 4\Debug\AnyCPU\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\Binary\Debug\AnyCPU\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
@@ -28,7 +28,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\..\..\..\..\..\Binary\Elysium for .NET 4\Release\AnyCPU\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\Binary\Release\AnyCPU\</OutputPath>
     <DefineConstants>TRACE;RELEASE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
