--- a/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
+++ b/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
@@ -30,7 +30,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\..\..\Binary\Elysium for .NET 4\Debug\AnyCPU\SDK\MSI\</OutputPath>
+    <OutputPath>..\..\..\..\Binary\Debug\AnyCPU\SDK\MSI\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
@@ -75,7 +75,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>..\..\..\..\Binary\Elysium for .NET 4\Release\AnyCPU\SDK\MSI\</OutputPath>
+    <OutputPath>..\..\..\..\Binary\Release\AnyCPU\SDK\MSI\</OutputPath>
     <DefineConstants>TRACE;RELEASE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
@@ -184,4 +184,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"..\..\..\..\..\Tools and Resources\Utilities\signtool\x86\signtool.exe" sign /f "..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
