--- a/Source code/Elysium.Notifications.Server/Elysium.Notifications.Server.csproj
+++ b/Source code/Elysium.Notifications.Server/Elysium.Notifications.Server.csproj
@@ -270,6 +270,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\Tools and Resources\Utilities\signtool\$(Platform)\signtool.exe" sign /f "..\..\..\Source code\SigningKey.pfx" "Elysium.Notifications.Server.exe"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\Tools and Resources\Utilities\signtool\signtool.exe" sign /f "..\..\..\Source code\SigningKey.pfx" "Elysium.Notifications.Server.exe"</PostBuildEvent>
   </PropertyGroup>
 </Project>
