--- a/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
+++ b/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
@@ -185,6 +185,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\..\..\Tools and Resources\Utilities\signtool\x86\signtool.exe" sign /f "..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\..\..\Tools and Resources\Utilities\signtool\signtool.exe" sign /f "..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
