--- a/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
+++ b/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
@@ -79,7 +79,7 @@
     <DefineConstants>TRACE;RELEASE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
     <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
@@ -104,16 +104,35 @@
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
+  <Choose>
+    <When Condition="'$(BuildingInsideVisualStudio)' == 'true'">
+      <ItemGroup>
+        <ProjectReference Include="..\..\..\Elysium\Elysium.csproj">
+          <Project>{5a65da67-130d-43d8-9224-4559b523b6d4}</Project>
+          <Name>Elysium</Name>
+          <Private>True</Private>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <Reference Include="Elysium, Version=1.5.751.0, Culture=neutral, PublicKeyToken=f8966962afac6b6d, processorArchitecture=MSIL">
+          <HintPath>..\..\..\..\Binary\$(Configuration)\AnyCPU\Elysium.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
   <ItemGroup>
-    <Compile Include="Converters\FeatureIDToFeatureTitleConverter.cs" />
-    <Compile Include="Design\Design.cs" />
     <Compile Include="App.cs" />
-    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
-    <Compile Include="Converters\ScreenToVisibilityConverter.cs" />
-    <Compile Include="Models\Feature.cs" />
-    <Compile Include="Native\SystemErrorCodes.cs" />
     <Compile Include="Native\HResult.cs" />
+    <Compile Include="Native\SystemErrorCodes.cs" />
     <Compile Include="Enumerations\InstallationState.cs" />
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Converters\FeatureIDToFeatureTitleConverter.cs" />
+    <Compile Include="Converters\ScreenToVisibilityConverter.cs" />
+    <Compile Include="Design\Design.cs" />
+    <Compile Include="Models\Feature.cs" />
     <Compile Include="MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
@@ -165,13 +184,6 @@
       <LastGenOutput>Resources.ru-ru.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Elysium\Elysium.csproj">
-      <Project>{5a65da67-130d-43d8-9224-4559b523b6d4}</Project>
-      <Name>Elysium</Name>
-      <Private>True</Private>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Installation logo.png" />
