--- a/Elysium for .NET 4/Source code/Elysium.Notifications.Server/App.config
+++ b/Elysium for .NET 4/Source code/Elysium.Notifications.Server/App.config
@@ -1,42 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Elysium.Notifications.Server.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <Elysium.Notifications.Server.Properties.Settings>
-            <setting name="Lifetime" serializeAs="String">
-                <value>00:00:10</value>
-            </setting>
-            <setting name="Margin" serializeAs="String">
-                <value>10,10,10,10</value>
-            </setting>
-            <setting name="Size" serializeAs="String">
-                <value>480,64</value>
-            </setting>
-            <setting name="HorizontalPlacement" serializeAs="String">
-                <value>Right</value>
-            </setting>
-            <setting name="VerticalPlacement" serializeAs="String">
-                <value>Top</value>
-            </setting>
-            <setting name="Animation" serializeAs="String">
-                <value>Slide</value>
-            </setting>
-        </Elysium.Notifications.Server.Properties.Settings>
-    </userSettings>
+  <configSections>
+      <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+          <section name="Elysium.Notifications.Server.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      </sectionGroup>
+  </configSections>
+  <userSettings>
+      <Elysium.Notifications.Server.Properties.Settings>
+          <setting name="Lifetime" serializeAs="String">
+              <value>00:00:10</value>
+          </setting>
+          <setting name="Margin" serializeAs="String">
+              <value>10,10,10,10</value>
+          </setting>
+          <setting name="Size" serializeAs="String">
+              <value>480,64</value>
+          </setting>
+          <setting name="HorizontalPlacement" serializeAs="String">
+              <value>Right</value>
+          </setting>
+          <setting name="VerticalPlacement" serializeAs="String">
+              <value>Top</value>
+          </setting>
+          <setting name="Animation" serializeAs="String">
+              <value>Slide</value>
+          </setting>
+      </Elysium.Notifications.Server.Properties.Settings>
+  </userSettings>
   <system.serviceModel>
     <services>
       <service name="Elysium.Notifications.Server.NotificationManager" behaviorConfiguration="NotificationManagerBehavior">
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:8000/elysium/v1.5/v4.0/notifications"/>
-          </baseAddresses>
-        </host>
         <endpoint address="net.pipe://localhost/elysium/v1.5/v4.0/notifications" binding="netNamedPipeBinding" contract="Elysium.Notifications.INotificationManager"/>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <bindings>
@@ -53,14 +47,14 @@
                  maxBufferSize="16777215"
                  maxConnections="128"
                  maxReceivedMessageSize="16777215">
-          <security mode="None"/>
+          <security mode="Transport"/>
         </binding>
       </netNamedPipeBinding>
     </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior name="NotificationManagerBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
