--- a/Elysium for .NET 4.5/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1049/MetroApplication.csproj
+++ b/Elysium for .NET 4.5/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1049/MetroApplication.csproj
@@ -8,8 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>$safeprojectname$</RootNamespace>
     <AssemblyName>$safeprojectname$</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v$targetframeworkversion$</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -48,7 +47,7 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Elysium, Version=1.5.769.0, Culture=neutral, PublicKeyToken=f8966962afac6b6d, processorArchitecture=MSIL" />
+    <Reference Include="Elysium, Version=1.5.791.0, Culture=neutral, PublicKeyToken=f8966962afac6b6d, processorArchitecture=MSIL" />
   </ItemGroup>
 
   <ItemGroup>
@@ -99,6 +98,12 @@
     <AppDesigner Include="Properties\" />
 
   </ItemGroup>
+
+  $if$ ($targetframeworkversion$ > 4.0)
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  $endif$
 
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
