--- a/Elysium for .NET 4.5/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1049/VS2012_CSharp_1049_ProjectTemplate.csproj
+++ b/Elysium for .NET 4.5/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1049/VS2012_CSharp_1049_ProjectTemplate.csproj
@@ -35,11 +35,12 @@
     <DebugType>pdbonly</DebugType>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.xaml"/>
+    <None Include="App.config" />
+    <None Include="App.xaml" />
     <None Include="App.xaml.cs" />
     <None Include="AssemblyInfo.cs" />
     <None Include="ElysiumApplication.vstemplate" />
-    <None Include="MainWindow.xaml"/>
+    <None Include="MainWindow.xaml" />
     <None Include="MainWindow.xaml.cs" />
     <None Include="MetroApplication.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
