--- a/Elysium for .NET 4.5/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
+++ b/Elysium for .NET 4.5/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
@@ -12,8 +12,6 @@
     <RootNamespace>Elysium.SDK.MSI.UI</RootNamespace>
     <AssemblyName>UI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <FileAlignment>512</FileAlignment>
@@ -210,6 +208,6 @@
   </PropertyGroup>
   <Import Condition="Exists('$(MSBuildExtensionPackPath)')" Project="$(MSBuildExtensionPackPath)" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\..\..\Tools and Resources\Utilities\signtool\signtool.exe" sign /f "..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\..\..\Tools and Resources\Utilities\signtool\x86\signtool.exe" sign /f "..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
