--- a/Main/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.NETFX45.csproj
+++ b/Main/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.NETFX45.csproj
@@ -26,6 +26,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\..\..\SigningKey.pfx</AssemblyOriginatorKeyFile>
+    <DigitalSignatureKeyFile>..\..\..\..\..\..\Source code\SigningKey.pfx</DigitalSignatureKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -213,6 +214,6 @@
   <Import Condition="Exists('$(MSBuildExtensionPackPath)')" Project="$(MSBuildExtensionPackPath)" />
   <Import Condition="Exists('$(TextTemplatingPath)')" Project="$(TextTemplatingPath)" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\..\..\..\Tools and Resources\Utilities\signtool\.NET Framework 4.5\x86\signtool.exe" sign /f "..\..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\..\..\..\Tools and Resources\Utilities\signtool\.NET Framework 4.5\x86\signtool.exe" sign /f "$(DigitalSignatureKeyFile)" "UI.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
