--- a/Main/Source code/Elysium.Test/Elysium.Test.NETFX45.csproj
+++ b/Main/Source code/Elysium.Test/Elysium.Test.NETFX45.csproj
@@ -23,6 +23,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <DigitalSignatureKeyFile>..\..\..\..\Source code\SigningKey.pfx</DigitalSignatureKeyFile>
+    <DigitalSignatureParams>/t http://timestamp.comodoca.com/authenticode</DigitalSignatureParams>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
@@ -291,6 +292,6 @@
   <Import Condition="Exists('$(MSBuildExtensionPackPath)')" Project="$(MSBuildExtensionPackPath)" />
   <Import Condition="Exists('$(TextTemplatingPath)')" Project="$(TextTemplatingPath)" />
   <PropertyGroup>
-    <PostBuildEvent>"..\..\..\..\Tools and Resources\Utilities\signtool\.NET Framework 4.5\$(Platform)\signtool.exe" sign /f "$(DigitalSignatureKeyFile)" "Elysium.Test.exe"</PostBuildEvent>
+    <PostBuildEvent>"..\..\..\..\Tools and Resources\Utilities\signtool\.NET Framework 4.5\$(Platform)\signtool.exe" sign /f "$(DigitalSignatureKeyFile)" $(DigitalSignatureParams) "$(AssemblyName).exe"</PostBuildEvent>
   </PropertyGroup>
 </Project>
